--- a/index.html
+++ b/index.html
@@ -21,6 +21,27 @@
   <body>
     <div class="container">
       <h1>Hello, world!</h1>
+      <ul>
+        <li>JavaScript (JS)</li>
+        <li>Operators</li>
+        <li>Variables</li>
+        <li>Variable naming conventions</li>
+        <li>Functions</li>
+        <li>Methods</li>
+        <li>Arguments</li>
+        <li>Parameters</li>
+        <li>Return</li>
+        <li>Chaining methods</li>
+        <li>Strings</li>
+        <li>Booleans</li>
+        <li>Undefined</li>
+        <li>NaN</li>
+        <li>Escape</li>
+        <li>Alert</li>
+        <li>Comments</li>
+        <li>jQuery</li>
+        <li>Attributes</li>
+      </ul>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
