--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Flashcards</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,25 +23,25 @@
     <div class="container">
       <h1>Hello, world!</h1>
       <ul>
-        <li>JavaScript (JS)</li>
-        <li>Operators</li>
-        <li>Variables</li>
-        <li>Variable naming conventions</li>
-        <li>Functions</li>
-        <li>Methods</li>
-        <li>Arguments</li>
-        <li>Parameters</li>
-        <li>Return</li>
-        <li>Chaining methods</li>
-        <li>Strings</li>
-        <li>Booleans</li>
-        <li>Undefined</li>
-        <li>NaN</li>
-        <li>Escape</li>
-        <li>Alert</li>
-        <li>Comments</li>
-        <li>jQuery</li>
-        <li>Attributes</li>
+        <li><span class="concept" id="1">JavaScript (JS)</span><span class="definition">A programming language</span></li>
+        <li><span class="concept">Operators</span><span class="definition"></li>
+        <li><span class="concept">Variables</span><span class="definition"></li>
+        <li><span class="concept">Variable naming conventions</span><span class="definition"></li>
+        <li><span class="concept">Functions</span><span class="definition"></li>
+        <li><span class="concept">Methods</span><span class="definition"></li>
+        <li><span class="concept">Arguments</span><span class="definition"></li>
+        <li><span class="concept">Parameters</span><span class="definition"></li>
+        <li><span class="concept">Return</span><span class="definition"></li>
+        <li><span class="concept">Chaining methods</span><span class="definition"></li>
+        <li><span class="concept">Strings</span><span class="definition"></li>
+        <li><span class="concept">Booleans</span><span class="definition"></li>
+        <li><span class="concept">Undefined</span><span class="definition"></li>
+        <li><span class="concept">NaN</span><span class="definition"></li>
+        <li><span class="concept">Escape</span><span class="definition"></li>
+        <li><span class="concept">Alert</span><span class="definition"></li>
+        <li><span class="concept">Comments</span><span class="definition"></li>
+        <li><span class="concept">jQuery</span><span class="definition"></li>
+        <li><span class="concept">Attributes</span><span class="definition"></li>
       </ul>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
