Totally switch approaches - switch classes to ids in the index.html and perform functions on ids instead of classes.

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello, world!</h1>
+      <h1>JavaScript Flashcards</h1>
       <ul>
-        <li><span class="concept" id="1">JavaScript (JS)</span><span class="definition">A programming language</span></li>
-        <li><span class="concept">Operators</span><span class="definition"></li>
-        <li><span class="concept">Variables</span><span class="definition"></li>
+        <li><span id="JS-con">JavaScript (JS)</span><span id="JS-def">A programming language</span></li>
+        <li><span id="Operators-con">Operators</span><span id="Operators-def">A symbol that is used to perform an operation</span></li>
+        <li><span id="Variables-con">Variables</span><span id="Variables-def">A stored piece of data of a particular data type</span></li>
+
+        <!-- Need to change classes to ids and add javascript. Also need to add id's for definitions and close the definition spans
         <li><span class="concept">Variable naming conventions</span><span class="definition"></li>
         <li><span class="concept">Functions</span><span class="definition"></li>
         <li><span class="concept">Methods</span><span class="definition"></li>
@@ -42,6 +44,7 @@
         <li><span class="concept">Comments</span><span class="definition"></li>
         <li><span class="concept">jQuery</span><span class="definition"></li>
         <li><span class="concept">Attributes</span><span class="definition"></li>
+        -->
       </ul>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
